added meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+    <meta name="description" content="Simple Blog Application." />
     <link rel="icon" href="/images/favicon.ico" sizes="48x48" />
     <link
       rel="icon"
