--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       media="(prefers-color-scheme: dark)"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Blog App</title>
   </head>
   <body>
     <div id="root"></div>
